# ns-platform

./: .gitignore  README.md  manage.py  pyproject.toml
goal_sessions/: admin.py  apps.py  models.py  urls.py  views.py
goal_sessions/migrations/: 0001_initial.py  0002_initial_data.py
goals/: admin.py  apps.py  models.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_initial_data.py
ns/: asgi.py  settings.py  urls.py  wsgi.py
templates/: 404.html  500.html  base.html  home.html
templates/goal_sessions/: session_detail.html  session_form.html  session_list.html
templates/goals/: goal_detail.html  goal_form.html  goal_list.html
templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html
templates/users/: login.html  profile.html  register.html  resend_verification.html
users/: admin.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py
users/management/commands/: send_verifications.py
users/migrations/: 0001_initial.py  0002_initial_data.py  0003_userprofile.py
