[tool.poetry]
name = "ns-platform"
version = "0.1.0"
description = "NS Platform - платформа определения целеполагания"
authors = ["A. Konovalov <macrocd@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "6.0.0"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"
gunicorn = "^24.0.0"
django-environ = "^0.12.0"
pillow = "^12.1.0"
django-crispy-forms = "^2.5"
crispy-bootstrap5 = "^2025.6"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
flake8 = "^7.3.0"
isort = "^7.0.0"
mypy = "^1.19.1"
pytest = "^9.0.2"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
